2007-07-03  Brian Warner  <warner@lothar.com>

	* buildbot/slave/commands.py (ShellCommand._startCommand): when
	logging the environment variables, put one variable on each line,
	rather than having one really long line with all of them. This
	should make them a bit more readable and not trigger the
	horizontal scrollbar (when viewing it in a web browser) quite so
	much. Thanks to Albert Hofkamp for the patch.

	* buildbot/steps/shell.py (ShellCommand): allow workdir= to be a
	WithProperties instance. Thanks to Axel Hecht for the patch.
	Closes #43.
	* buildbot/test/test_properties.py (Interpolate.testWorkdir): test it
	* docs/buildbot.texinfo (Build Properties): document it
	* buildbot/slave/commands.py (ShellCommand._startCommand): create the
	workdir if it didn't already exist.

	* docs/buildbot.texinfo (Scheduler Types): correct the description
	of Dependent schedulers. Thanks to Greg Ward for the patch.

	* buildbot/steps/source.py (SVN.startVC): when applying a patch,
	add "[patch]" to the step's display. Thanks to Dustin Mitchell for
	the patch. Closes #49.

	* buildbot/slave/commands.py (rmdirRecursive): chmod everything to
	0700 before removing it, to deal with situations where a build will
	leave files around without write permissions and the 'copy' or
	'clobber' VC checkout modes need to blow away the tree first.
	Thanks to Steve Milner for the suggestion and the patch (which I
	mangled horribly). Closes #29.
	* buildbot/test/test_slavecommand.py (Utilities.test_rmdirRecursive):
	test for it

	* buildbot/test/runutils.py (RunMixin.disappearSlave): oops, add
	an allowReconnect= argument to let callers control whether they
	want this don't-let-it-reconnect behavior, since some tests care.
	Factor out the .continueTrying=False lines from those callers.
	* buildbot/test/test_slaves.py: same
	* buildbot/test/test_run.py: same

2007-07-02  Brian Warner  <warner@lothar.com>

	* buildbot/test/runutils.py (RunMixin.disappearSlave): once a